feat: PLUT-912 Graph API
